5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1764_1185.log
== TEST (2019-05-26 19:27:44) 
-- CODE:
from numpy import*

p= array(eval(input("Insira o indice de glicose dos pacientes: ")))
i=0
o=0

while (i< size[p]):
	if (p[i]>99):
		o+=1
	i+=1
	print(o)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:28:42) 
-- CODE:
from numpy import*

p= array(eval(input("Insira o indice de glicose dos pacientes: ")))
i=0
o=0

while (i < size(p)):
	if (p[i]>99):
		o+=1
	i+=1
	print(o)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:29:51) 
-- CODE:
from numpy import*

p= array(eval(input("Insira o indice de glicose dos pacientes: ")))
i=0
o=0

while (i < size(p)):
	if (p[i]>99):
		o+=1
	i+=1
print(o)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 19:29:58) 
-- CODE:
from numpy import*

p= array(eval(input("Insira o indice de glicose dos pacientes: ")))
i=0
o=0

while (i < size(p)):
	if (p[i]>99):
		o+=1
	i+=1
print(o)
-- EXECUTION TIME:
0.432508
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:30:02) 
-- CODE:
from numpy import*

p= array(eval(input("Insira o indice de glicose dos pacientes: ")))
i=0
o=0

while (i < size(p)):
	if (p[i]>99):
		o+=1
	i+=1
print(o)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:33:02) 
-- CODE:
from numpy import*

p= array(eval(input("Insira o indice de glicose dos pacientes: ")))
i=0
o=0

while (i < size(p)):
	if (p[i]>99):
		o+=1
      print(i)	
	i+=1

	
print(o)
-- ERROR:
File "XXXX", line 10
    print(i)	
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:33:11) 
-- CODE:
from numpy import*

p= array(eval(input("Insira o indice de glicose dos pacientes: ")))
i=0
o=0

while (i < size(p)):
	if (p[i]>99):
		o+=1
	i+=1
	print(i)
	
print(o)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:33:42) 
-- CODE:
from numpy import*

p= array(eval(input("Insira o indice de glicose dos pacientes: ")))
i=0
o=0

while (i < size(p)):
	if (p[i]>99):
		o+=1
	i+=1
	print([i])
	
print(o)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:34:24) 
-- CODE:
from numpy import*

p= array(eval(input("Insira o indice de glicose dos pacientes: ")))
i=0
o=0

while (i < size(p)):
	if (p[i]>99):
		o+=1
		print(i)
	i+=1
	
print(o)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 19:34:39) 
-- CODE:
from numpy import*

p= array(eval(input("Insira o indice de glicose dos pacientes: ")))
i=0
o=0

while (i < size(p)):
	if (p[i]>99):
		o+=1
		print(i)
	i+=1
	
print(o)
-- EXECUTION TIME:
0.558438
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:58:01) 
-- CODE:
from numpy import*

p= array(eval(input("Insira o indice de glicose dos pacientes: ")))
i=0
o=0

while (i < size(p)):
	if (p[i]>99):
		o+=1
		print(i)
	i+=1
i=0
while (i < size(v)):
	if(v[i]>=0):
		v2[a]=v[i]
		a+=1
	i+=1	
print(o)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:58:23) 
-- CODE:
from numpy import*

p= array(eval(input("Insira o indice de glicose dos pacientes: ")))
i=0
o=0

while (i < size(p)):
	if (p[i]>99):
		o+=1
		print(i)
	i+=1
i=0
while (i < size(p)):
	if(v[i]>=0):
		v2[a]=v[i]
		a+=1
	i+=1	
print(o)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:59:24) 
-- CODE:
from numpy import*

p= array(eval(input("Insira o indice de glicose dos pacientes: ")))
i=0
o=0

while (i < size(p)):
	if (p[i]>99):
		o+=1
		print(i)

print(o)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:59:39) 
-- CODE:
from numpy import*

p= array(eval(input("Insira o indice de glicose dos pacientes: ")))
i=0
o=0

while (i < size(p)):
	if (p[i]>99):
		o+=1
		print(i)
	i+=1

print(o)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 20:59:52) 
-- CODE:
from numpy import*

p= array(eval(input("Insira o indice de glicose dos pacientes: ")))
i=0
o=0

while (i < size(p)):
	if (p[i]>99):
		o+=1
		print(i)
	i+=1

print(o)
-- EXECUTION TIME:
0.591094
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
